email configs upgrade

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
 node_modules
 api/config.yml
 src/services/config.json
+api/app/__pycache__/__init__.cpython-38.pyc
+api/app/__pycache__/email.cpython-38.pyc
+api/app/__pycache__/forms.cpython-38.pyc
+api/app/__pycache__/models.cpython-38.pyc
+api/app/__pycache__/routes.cpython-38.pyc
+api/app/__pycache__/social_login.cpython-38.pyc
+api/app/__pycache__/socket.cpython-38.pyc
+api/.idea/.gitignore
+api/.idea/api.iml
+api/.idea/misc.xml
+api/.idea/modules.xml
+api/.idea/vcs.xml
+api/.idea/inspectionProfiles/profiles_settings.xml
+api/.idea/inspectionProfiles/Project_Default.xml
+api/__pycache__/config.cpython-38.pyc
