further replacing hardcoded configs to config file

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,28 @@ api/.idea/vcs.xml
 api/.idea/inspectionProfiles/profiles_settings.xml
 api/.idea/inspectionProfiles/Project_Default.xml
 api/__pycache__/config.cpython-38.pyc
+api/migrations/__pycache__/env.cpython-38.pyc
+api/migrations/alembic.ini
+api/migrations/env.py
+api/migrations/README
+api/migrations/script.py.mako
+api/migrations/versions/c46d9f62fb33_.py
+api/migrations/versions/__pycache__/c46d9f62fb33_.cpython-38.pyc
+api/resources/__pycache__/game.cpython-38.pyc
+api/resources/__pycache__/general.cpython-38.pyc
+api/resources/__pycache__/hand.cpython-38.pyc
+api/resources/__pycache__/room.cpython-38.pyc
+api/resources/__pycache__/turn.cpython-38.pyc
+api/resources/__pycache__/user.cpython-38.pyc
+api/app.db
+.idea/.gitignore
+.idea/misc.xml
+.idea/modules.xml
+.idea/nigels-app.iml
+.idea/vcs.xml
+.idea/workspace.xml
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/inspectionProfiles/Project_Default.xml
+api/migrations/versions/082064787bd6_.py
+api/migrations/versions/__pycache__/082064787bd6_.cpython-38.pyc
+src/config.json
